[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/LinLibertine_DR.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/LinLibertineFiltered.tres" type="DynamicFont" id=2]
[ext_resource path="res://Styles/MenuButtonStyle.tres" type="StyleBox" id=3]
[ext_resource path="res://Styles/MenuButtonHovered.tres" type="StyleBox" id=4]
[ext_resource path="res://Scripts/MainMenuButtons.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 115
use_filter = true
font_data = ExtResource( 1 )

[node name="Main Menu" type="Node"]

[node name="GUI Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="GUI Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Borders" type="Control" parent="GUI Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 35.0
margin_top = 35.0
margin_right = -35.0
margin_bottom = -35.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI Control/Borders"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Control" parent="GUI Control/Borders/VBoxContainer"]
margin_right = 1850.0
margin_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 400 )
size_flags_horizontal = 13
size_flags_vertical = 13
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="GUI Control/Borders/VBoxContainer/Title"]
anchor_right = 0.98
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "The Dragon Tome:
Shadow of Nariss"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GUI Control/Borders/VBoxContainer"]
margin_top = 450.0
margin_right = 1850.0
margin_bottom = 925.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI Control/Borders/VBoxContainer/HBoxContainer"]
margin_right = 646.0
margin_bottom = 475.0
rect_min_size = Vector2( 300, 475 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="GUI Control/Borders/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 646.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 60 )
focus_mode = 0
custom_styles/hover = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = " Play"
align = 0

[node name="Settings" type="Button" parent="GUI Control/Borders/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 646.0
margin_bottom = 295.0
custom_styles/hover = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = " Settings"
align = 0

[node name="Credits" type="Button" parent="GUI Control/Borders/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 315.0
margin_right = 646.0
margin_bottom = 430.0
custom_styles/hover = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = " Credits"
align = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="GUI Control/Borders/VBoxContainer/HBoxContainer"]
margin_left = 650.0
margin_right = 1850.0
margin_bottom = 475.0
rect_min_size = Vector2( 1200, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="GUI Control/Borders/VBoxContainer/HBoxContainer/VBoxContainer/Play" to="GUI Control/Borders/VBoxContainer/HBoxContainer/VBoxContainer" method="_on_Play_button_up"]
[connection signal="button_up" from="GUI Control/Borders/VBoxContainer/HBoxContainer/VBoxContainer/Settings" to="GUI Control/Borders/VBoxContainer/HBoxContainer/VBoxContainer" method="_on_Settings_button_up"]
[connection signal="button_up" from="GUI Control/Borders/VBoxContainer/HBoxContainer/VBoxContainer/Credits" to="GUI Control/Borders/VBoxContainer/HBoxContainer/VBoxContainer" method="_on_Credits_button_up"]
